task: Task: Introduction to Tags & Tags Usage

--- a/Task_HelloWorld/index.html
+++ b/Task_HelloWorld/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Hello World Problem</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
 
-  <body style="margin: 0; padding: 0">
-    <!-- Start coding below FOR HELLO WORLD TASK -->
-  </body>
+<html>
+<head>
+  <title>Hello World </title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+<h1><center>Hello World </h1></center>
+<p><i>In HTML,</i>
+  you can use various tags to format your content. 
+  <br>For example, you can use the Bold tag to make text <b>bold</b>, the Italic tag to italicize text, and the <u>Underline</u> tag to underline text.
+  <br><br>Additionally, the
+tag is used to insert line breaks, creating new lines in your text.
+</body>
 </html>
